# wyvern-mc

./: .gitignore  Cargo.toml  README.md
crates/wyvern-actors/: Cargo.toml
crates/wyvern-actors-macros/: Cargo.toml
crates/wyvern-actors-macros/src/: actor.rs  lib.rs  message.rs
crates/wyvern-actors/src/: lib.rs
crates/wyvern-components/: Cargo.toml
crates/wyvern-components/src/: holder.rs  lib.rs  map.rs  patch.rs  types.rs
crates/wyvern-core/: Cargo.toml
crates/wyvern-core/src/: events.rs  lib.rs  plugin.rs  runtime.rs
crates/wyvern-core/src/blocks/: components.rs  mod.rs  properties.rs  structure.rs
crates/wyvern-core/src/components/: holder.rs  types.rs
crates/wyvern-core/src/datatypes/: particle.rs
crates/wyvern-core/src/dimension/: chunk.rs  mod.rs  update.rs
crates/wyvern-core/src/entities/: attributes.rs  components.rs  mod.rs  update.rs
crates/wyvern-core/src/inventory/: mod.rs
crates/wyvern-core/src/item/: components.rs  conversion.rs  mod.rs
crates/wyvern-core/src/player/: chunkload.rs  components.rs  data.rs  itf.rs  mod.rs  net.rs  skins.rs  update.rs
crates/wyvern-core/src/player/components/: mod.rs  update.rs
crates/wyvern-core/src/player/stages/: config.rs  login.rs  play.rs  status.rs
crates/wyvern-core/src/server/: builder.rs  dimensions.rs  mod.rs  registries.rs
crates/wyvern-core/src/values/: cell.rs  key.rs  registry.rs  sound.rs
crates/wyvern-core/src/values/nbt/: mod.rs  ops.rs
crates/wyvern-core/src/values/regval/: painting_variant.rs  wolf_variant.rs
crates/wyvern-core/src/values/resource/: mod.rs
crates/wyvern-datatypes/: Cargo.toml
crates/wyvern-datatypes/src/: lib.rs  particle.rs  sound.rs
crates/wyvern-datatypes/src/nbt/: mod.rs  ops.rs  snbt.rs  vx_ops.rs
crates/wyvern-datatypes/src/regval/: painting_variant.rs  wolf_variant.rs
crates/wyvern-datatypes/src/text/: kinds.rs  meta.rs  mod.rs
crates/wyvern-macros/: Cargo.toml
crates/wyvern-macros/src/: actor.rs  lib.rs  message.rs  registries.rs  server.rs
crates/wyvern-mc/: Cargo.toml
crates/wyvern-mc/src/: actors.rs  components.rs  events.rs  future.rs  lib.rs  proxy.rs  runtime.rs
crates/wyvern-mc/src/blocks/: components.rs  mod.rs  properties.rs
crates/wyvern-mc/src/components/: holder.rs  map.rs  mod.rs  patch.rs  types.rs
crates/wyvern-mc/src/dimension/: blocks.rs  chunk.rs  dimension.rs  entity.rs  message.rs  mod.rs  properties.rs  update.rs
crates/wyvern-mc/src/entities/: attributes.rs  components.rs  mod.rs
crates/wyvern-mc/src/events/: bus.rs  mod.rs
crates/wyvern-mc/src/inventory/: components.rs  data.rs  item.rs  mod.rs
crates/wyvern-mc/src/item/: components.rs  conversion.rs  mod.rs
crates/wyvern-mc/src/player/: chunkload.rs  components.rs  data.rs  inventory.rs  message.rs  mod.rs  net.rs  player.rs  proxy.rs  stages.rs  update.rs
crates/wyvern-mc/src/player/stages/: config.rs  login.rs  play.rs  status.rs
crates/wyvern-mc/src/proxy/: builder.rs  mod.rs  net.rs
crates/wyvern-mc/src/server/: builder.rs  data.rs  dimensions.rs  message.rs  mod.rs  proxy.rs  registries.rs  server.rs
crates/wyvern-mc/src/systems/: events.rs  function.rs  intos.rs  mod.rs  parameters.rs  scheduler.rs  system.rs  typemap.rs
crates/wyvern-mc/src/values/: key.rs  mod.rs  nbt.rs  position.rs  registry.rs  sound.rs  vecs.rs
crates/wyvern-mc/src/values/nbt/: mod.rs  ops.rs
crates/wyvern-mc/src/values/regval/: dimtype.rs  mod.rs  painting_variant.rs  wolf_variant.rs
crates/wyvern-mc/src/values/text/: kinds.rs  meta.rs  mod.rs
crates/wyvern-textures/: Cargo.toml
crates/wyvern-textures/src/: lib.rs  zip.rs
crates/wyvern-values/: Cargo.toml
crates/wyvern-values/src/: gamemode.rs  key.rs  lib.rs  registry.rs  sound.rs  vecs.rs  window.rs
crates/wyvern-values/src/nbt/: mod.rs
crates/wyvern-values/src/regval/: painting_variant.rs  wolf_variant.rs
examples/: Cargo.toml  actor.rs  clicker.rs  combat.rs  empty.rs  game_of_life.rs  pack.rs  parkour.rs  quakecraft.rs  signature.txt  simple.rs  structure.nbt  structures.rs  terrain.rs  texture.txt
examples/assets/: quake.nbt
