[workspace]
resolver = "3"
members = ["examples", "crates/*"]

[workspace.dependencies]
voxidian-protocol = { git = "https://github.com/LighthouseMC/VoxidianProtocol.git" }
# voxidian-protocol = { path = "../voxidian-protocol/" }
tokio = { version = "1.42.0", features = ["full"] }
wyvern-macros = { path = "./crates/wyvern-macros" }
proc-macro2 = { version = "*" }
syn = { version = "*", features = ["full"] }
quote = { version = "*" }
rust-format = { version = "*" }
futures-util = { version = "*" }
futures-lite = { version = "*" }
log = { version = "*" }
env_logger = { version = "*" }
flume = { version = "*", features = ["async"] }
async-net = { version = "*" }
async-io = { version = "*" }
rand = { version = "*" }

[profile.release]
debug = true
