[workspace]
resolver = "3"
members = ["examples", "crates/*"]

[workspace.dependencies]
# voxidian-protocol = { git = "https://github.com/LighthouseMC/VoxidianProtocol.git" }
voxidian-protocol = { path = "../voxidian-protocol/" }
datafix = { git = "https://github.com/akarahdev/datafix.git" }
wyvern-macros = { path = "./crates/wyvern-macros" }
proc-macro2 = { version = "*" }
syn = { version = "*", features = ["full"] }
quote = { version = "*" }
rust-format = { version = "*" }
log = { version = "*" }
env_logger = { version = "*" }
flume = { version = "*" }
rand = { version = "*" }
dyn-clone = "1.0.18"
rustc-hash = { version = "*" }

[profile.release]
debug = true
