[workspace]
resolver = "3"
members = ["examples", "crates/*"]

[workspace.dependencies]
voxidian-protocol = { git = "https://github.com/LighthouseMC/VoxidianProtocol.git", branch = "1.21.5" }
# voxidian-protocol = { path = "../voxidian-protocol/" }
datafix = { git = "https://github.com/akarahdev/datafix.git" }
wyvern-macros = { path = "./crates/wyvern-macros" }
wyvern-components = { path = "./crates/wyvern-components" }
wyvern-actors = { path = "./crates/wyvern-actors" }
wyvern-core = { path = "./crates/wyvern-core" }
wyvern-values = { path = "./crates/wyvern-values" }
wyvern-datatypes = { path = "./crates/wyvern-datatypes" }
wyvern-textures = { path = "./crates/wyvern-textures" }
proc-macro2 = { version = "*" }
syn = { version = "*", features = ["full"] }
quote = { version = "*" }
rust-format = { version = "*" }
log = { version = "*" }
env_logger = { version = "*" }
flume = { version = "*" }
rand = { version = "*" }
dyn-clone = "1.0.18"
rustc-hash = { version = "*" }
uuid = { version = "*" }
num-traits = { version = "*" }
zip = { version = "*" }
async-executor = { version = "*", features = ["static"] }
futures = { version = "*" }
ureq = { version = "*" }
json = { version = "*" }
lockfree = { version = "*" }

[profile.release]
debug = true
