[package]
name = "wyvern-examples"
version = "0.0.0"
edition = "2024"

[dev-dependencies]
wyvern-mc = { path = "../crates/wyvern-mc" }
tokio = { workspace = true }
voxidian-protocol = { workspace = true }

[[example]]
name = "simple"
path = "./simple.rs"

[[example]]
name = "actor"
path = "./actor.rs"
