[package]
name = "wyvern-examples"
version = "0.0.0"
edition = "2024"

[dev-dependencies]
wyvern-mc = { path = "../crates/wyvern-mc", features = ["rt-tokio"] }
tokio = { workspace = true }
voxidian-protocol = { workspace = true }
noise = "0.9.0"
rand = "*"
log = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "simple"
path = "./simple.rs"

[[example]]
name = "clicker"
path = "./clicker.rs"
