[package]
name = "wyvern-examples"
version = "0.0.0"
edition = "2024"

[dev-dependencies]
wyvern-mc = { path = "../crates/wyvern-mc" }
voxidian-protocol = { workspace = true }
noise = "0.9.0"
rand = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "simple"
path = "./simple.rs"

[[example]]
name = "clicker"
path = "./clicker.rs"

[[example]]
name = "game_of_life"
path = "./game_of_life.rs"

[[example]]
name = "terrain"
path = "./terrain.rs"

[[example]]
name = "parkour"
path = "./parkour.rs"

[[example]]
name = "empty"
path = "./empty.rs"

[[example]]
name = "combat"
path = "./combat.rs"
