[package]
name = "wyvern-mc"
version = "0.0.0"
edition = "2024"


[dependencies]
wyvern-core = { workspace = true }
wyvern-values = { workspace = true }
wyvern-actors = { workspace = true }
wyvern-components = { workspace = true }
wyvern-datatypes = { workspace = true }
wyvern-macros = { workspace = true }
wyvern-textures = { workspace = true }
